# ftx_zorro_plugin

./: .gitignore  .gitmodules  CMakeLists.txt  ChangeLog.md  LICENSE  README.md  dllmain.cpp  ftx.cpp  ftx.h  main.cpp
VS/: ftx_zorro_plugin.sln  ftx_zorro_plugin.vcxproj  ftx_zorro_plugin.vcxproj.filters
include/: ftx.h  ftx_client.h  ftx_models.h  http_session.h  i_json.h  trading.h  utils.h
include/ftx_api/: ftx_http_session.h  ftx_models.h  ftx_rest_client.h  ftx_websocket.h  ftx_ws_client.h  ftx_ws_stream_manager.h  i_json.h  utils.h
src/: ftx.cpp  ftx_client.cpp  ftx_models.cpp  http_session.cpp  sha256.cpp  stdafx.cpp  utils.cpp
src/ftx_api/: ftx_http_session.cpp  ftx_models.cpp  ftx_rest_client.cpp  ftx_websocket.cpp  ftx_ws_client.cpp  ftx_ws_stream_manager.cpp  utils.cpp
test/: test.cpp
